--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,137 @@
   "bugs": {
     "url": "https://github.com/renato181/myFlix-client/issues"
   },
-  "homepage": "https://github.com/renato181/myFlix-client#readme"
+  "homepage": "https://github.com/renato181/myFlix-client#readme",
+  "dependencies": {
+    "abortcontroller-polyfill": "^1.7.3",
+    "ansi-escapes": "^4.3.2",
+    "ansi-html-community": "^0.0.8",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "array-union": "^2.1.0",
+    "astral-regex": "^2.0.0",
+    "balanced-match": "^1.0.2",
+    "base-x": "^3.0.9",
+    "brace-expansion": "^1.1.11",
+    "binary-extensions": "^2.2.0",
+    "braces": "^3.0.2",
+    "browserslist": "^4.19.1",
+    "caniuse-lite": "^1.0.30001298",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.2",
+    "chrome-trace-event": "^1.0.3",
+    "color-convert": "^2.0.1",
+    "clone": "^2.1.2",
+    "color-name": "^1.1.4",
+    "command-exists": "^1.2.9",
+    "concat-map": "^0.0.1",
+    "cross-spawn": "^6.0.5",
+    "core-util-is": "^1.0.3",
+    "detect-libc": "^1.0.3",
+    "dir-glob": "^3.0.1",
+    "dotenv": "^7.0.0",
+    "dotenv-expand": "^5.1.0",
+    "electron-to-chromium": "^1.4.41",
+    "emoji-regex": "^8.0.0",
+    "emphasize": "^4.2.0",
+    "fast-glob": "^3.1.1",
+    "escalade": "^3.1.1",
+    "fastest-levenshtein": "^1.0.12",
+    "fastq": "^1.13.0",
+    "fault": "^1.0.4",
+    "fill-range": "^7.0.1",
+    "format": "^0.2.2",
+    "fs.realpath": "^1.0.0",
+    "glob": "^7.2.0",
+    "glob-parent": "^5.1.2",
+    "globby": "^11.1.0",
+    "graceful-fs": "^4.2.9",
+    "has-flag": "^4.0.0",
+    "highlight.js": "^10.4.1",
+    "iferr": "^1.0.2",
+    "ignore": "^5.2.0",
+    "immutable": "^4.0.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-docker": "^2.2.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-url": "^1.2.4",
+    "is-wsl": "^2.2.0",
+    "isarray": "^1.0.0",
+    "js-tokens": "^4.0.0",
+    "isexe": "^2.0.0",
+    "lmdb": "^2.1.4",
+    "json5": "^1.0.1",
+    "json-source-map": "^0.6.1",
+    "loose-envify": "^1.4.0",
+    "lru-cache": "^6.0.0",
+    "lowlight": "^1.17.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.4",
+    "minimatch": "^3.0.4",
+    "mkdirp": "^0.5.5",
+    "minimist": "^1.2.5",
+    "msgpackr": "^1.5.2",
+    "msgpackr-extract": "^1.0.16",
+    "nan": "^2.15.0",
+    "ncp": "^2.0.0",
+    "nice-try": "^1.0.5",
+    "node-addon-api": "^3.2.1",
+    "node-forge": "^0.10.0",
+    "node-releases": "^2.0.1",
+    "node-gyp-build": "^4.3.0",
+    "normalize-path": "^3.0.0",
+    "nullthrows": "^1.1.1",
+    "object-assign": "^4.1.1",
+    "once": "^1.4.0",
+    "open": "^7.4.2",
+    "ordered-binary": "^1.2.3",
+    "path-is-absolute": "^1.0.1",
+    "path-type": "^4.0.0",
+    "path-key": "^2.0.1",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "process-nextick-args": "^2.0.1",
+    "queue-microtask": "^1.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^3.6.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.2.1",
+    "sass": "^1.47.0",
+    "scheduler": "^0.20.2",
+    "semver": "^5.7.1",
+    "shebang-regex": "^1.0.0",
+    "shebang-command": "^1.2.0",
+    "slash": "^3.0.0",
+    "slice-ansi": "^4.0.0",
+    "source-map-js": "^1.0.1",
+    "split2": "^3.2.2",
+    "string_decoder": "^1.1.1",
+    "string-width": "^4.2.3",
+    "supports-hyperlinks": "^2.2.0",
+    "supports-color": "^7.2.0",
+    "terminal-link": "^2.1.1",
+    "strip-ansi": "^6.0.1",
+    "to-regex-range": "^5.0.1",
+    "type-fest": "^0.21.3",
+    "util-deprecate": "^1.0.2",
+    "utility-types": "^3.10.0",
+    "weak-lru-cache": "^1.2.1",
+    "which": "^1.3.1",
+    "wrappy": "^1.0.2",
+    "xxhash-wasm": "^0.4.2",
+    "yallist": "^4.0.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
