--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "main": "index.js",
+  "source": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel",
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
@@ -26,21 +28,21 @@
     "astral-regex": "^2.0.0",
     "balanced-match": "^1.0.2",
     "base-x": "^3.0.9",
-    "brace-expansion": "^1.1.11",
     "binary-extensions": "^2.2.0",
+    "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "browserslist": "^4.19.1",
     "caniuse-lite": "^1.0.30001298",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.2",
     "chrome-trace-event": "^1.0.3",
-    "color-convert": "^2.0.1",
     "clone": "^2.1.2",
+    "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "command-exists": "^1.2.9",
     "concat-map": "^0.0.1",
-    "cross-spawn": "^6.0.5",
     "core-util-is": "^1.0.3",
+    "cross-spawn": "^6.0.5",
     "detect-libc": "^1.0.3",
     "dir-glob": "^3.0.1",
     "dotenv": "^7.0.0",
@@ -48,8 +50,8 @@
     "electron-to-chromium": "^1.4.41",
     "emoji-regex": "^8.0.0",
     "emphasize": "^4.2.0",
-    "fast-glob": "^3.1.1",
     "escalade": "^3.1.1",
+    "fast-glob": "^3.1.1",
     "fastest-levenshtein": "^1.0.12",
     "fastq": "^1.13.0",
     "fault": "^1.0.4",
@@ -69,36 +71,36 @@
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
     "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
     "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "is-url": "^1.2.4",
     "is-wsl": "^2.2.0",
     "isarray": "^1.0.0",
-    "js-tokens": "^4.0.0",
     "isexe": "^2.0.0",
-    "lmdb": "^2.1.4",
-    "json5": "^1.0.1",
+    "js-tokens": "^4.0.0",
     "json-source-map": "^0.6.1",
+    "json5": "^1.0.1",
+    "lmdb": "^2.1.4",
     "loose-envify": "^1.4.0",
-    "lru-cache": "^6.0.0",
     "lowlight": "^1.17.0",
+    "lru-cache": "^6.0.0",
     "merge2": "^1.4.1",
     "micromatch": "^4.0.4",
     "minimatch": "^3.0.4",
-    "mkdirp": "^0.5.5",
     "minimist": "^1.2.5",
+    "mkdirp": "^0.5.5",
     "msgpackr": "^1.5.2",
     "msgpackr-extract": "^1.0.16",
     "nan": "^2.15.0",
     "ncp": "^2.0.0",
     "nice-try": "^1.0.5",
     "node-addon-api": "^3.2.1",
-    "node-forge": "^0.10.0",
-    "node-releases": "^2.0.1",
+    "node-forge": "^1.2.1",
     "node-gyp-build": "^4.3.0",
+    "node-releases": "^2.0.1",
     "normalize-path": "^3.0.0",
     "nullthrows": "^1.1.1",
     "object-assign": "^4.1.1",
@@ -106,8 +108,8 @@
     "open": "^7.4.2",
     "ordered-binary": "^1.2.3",
     "path-is-absolute": "^1.0.1",
-    "path-type": "^4.0.0",
     "path-key": "^2.0.1",
+    "path-type": "^4.0.0",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "process-nextick-args": "^2.0.1",
@@ -123,18 +125,18 @@
     "sass": "^1.47.0",
     "scheduler": "^0.20.2",
     "semver": "^5.7.1",
-    "shebang-regex": "^1.0.0",
     "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
     "slash": "^3.0.0",
     "slice-ansi": "^4.0.0",
     "source-map-js": "^1.0.1",
     "split2": "^3.2.2",
     "string_decoder": "^1.1.1",
     "string-width": "^4.2.3",
-    "supports-hyperlinks": "^2.2.0",
-    "supports-color": "^7.2.0",
-    "terminal-link": "^2.1.1",
     "strip-ansi": "^6.0.1",
+    "supports-color": "^7.2.0",
+    "supports-hyperlinks": "^2.2.0",
+    "terminal-link": "^2.1.1",
     "to-regex-range": "^5.0.1",
     "type-fest": "^0.21.3",
     "util-deprecate": "^1.0.2",
@@ -145,6 +147,9 @@
     "xxhash-wasm": "^0.4.2",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.1.1",
+    "parcel": "^2.1.1"
+  }
 }
