--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "anymatch": "^3.1.2",
     "array-union": "^2.1.0",
     "astral-regex": "^2.0.0",
+    "axios": "^0.25.0",
     "balanced-match": "^1.0.2",
     "base-x": "^3.0.9",
     "binary-extensions": "^2.2.0",
@@ -113,6 +114,7 @@
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "process-nextick-args": "^2.0.1",
+    "prop-types": "^15.8.1",
     "queue-microtask": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
