--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "source": "index.html",
+  "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel",
+    "start": "parcel index.html",
     "build": "parcel build"
   },
   "repository": {
