--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "prop-types": "^15.8.1",
     "queue-microtask": "^1.2.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "readable-stream": "^2.3.7",
     "readdirp": "^3.6.0",
