--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "default": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html",
+    "start": "parcel src/index.html",
     "build": "parcel build"
   },
   "repository": {
